--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,11 +40,8 @@ jobs:
           mkdir -p ~/.ssh
           ssh-keyscan -H ${{ secrets.DROPLET_IP }} >> ~/.ssh/known_hosts
 
-          # Create the target directory on the droplet if it doesn't exist
-          ssh ${{ secrets.DROPLET_USERNAME }}@${{ secrets.DROPLET_IP }} "mkdir -p /root/github"
+          # Set permissions for SSH private key
+          chmod 600 ${{ secrets.SSH_PRIVATE_KEY }}
 
           # Copy the Docker image to the desired folder on the droplet
-          docker save santhoshkumar191020/fleet2:latest | ssh ${{ secrets.DROPLET_USERNAME }}@${{ secrets.DROPLET_IP }} "docker load"
-        env:
-          DOCKER_CONFIG: ~/.docker
-          DOCKER_TLS_CERTDIR: ''
+          docker save santhoshkumar191020/fleet2:latest | ssh -i ${{ secrets.SSH_PRIVATE_KEY }} ${{ secrets.DROPLET_USERNAME }}@${{ secrets.DROPLET_IP }} "docker load"
