--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,8 +40,11 @@ jobs:
           mkdir -p ~/.ssh
           ssh-keyscan -H ${{ secrets.DROPLET_IP }} >> ~/.ssh/known_hosts
 
-          # Set permissions for SSH private key
-          chmod 600 ${{ secrets.SSH_PRIVATE_KEY }}
+          # Save SSH private key to a file
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+
+          # Set correct permissions for SSH private key
+          chmod 600 ~/.ssh/id_rsa
 
           # Copy the Docker image to the desired folder on the droplet
-          docker save santhoshkumar191020/fleet2:latest | ssh -i ${{ secrets.SSH_PRIVATE_KEY }} ${{ secrets.DROPLET_USERNAME }}@${{ secrets.DROPLET_IP }} "docker load"
+          docker save santhoshkumar191020/fleet2:latest | ssh -i ~/.ssh/id_rsa ${{ secrets.DROPLET_USERNAME }}@${{ secrets.DROPLET_IP }} "docker load"
