--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,8 +46,12 @@ jobs:
           # Set correct permissions for SSH private key
           chmod 600 ~/.ssh/id_rsa
 
-          # Ensure correct ownership of SSH private key
-          sudo chown ${{ secrets.DROPLET_USERNAME }} ~/.ssh/id_rsa
+          # Use sudo to change ownership of SSH private key
+          sudo chown ${{ runner.username }}:~/.ssh/id_rsa
+
+          # Use SSH agent to add the private key
+          eval "$(ssh-agent -s)"
+          ssh-add ~/.ssh/id_rsa
 
           # Copy the Docker image to the desired folder on the droplet
           docker save santhoshkumar191020/fleet2:latest | ssh -i ~/.ssh/id_rsa ${{ secrets.DROPLET_USERNAME }}@${{ secrets.DROPLET_IP }} "docker load"
