--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,12 +46,9 @@ jobs:
           # Set correct permissions for SSH private key
           chmod 600 ~/.ssh/id_rsa
 
-          # Use sudo to change ownership of SSH private key
-          sudo chown ${{ runner.username }}: ${{ runner.username }} ~/.ssh/id_rsa
-
           # Use SSH agent to add the private key
           eval "$(ssh-agent -s)"
-          ssh-add ~/.ssh/id_rsa
+          echo "${{ secrets.SSH_PASSPHRASE }}" | ssh-add - 
 
           # Copy the Docker image to the desired folder on the droplet
           docker save santhoshkumar191020/fleet2:latest | ssh -i ~/.ssh/id_rsa ${{ secrets.DROPLET_USERNAME }}@${{ secrets.DROPLET_IP }} "docker load"
