--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,14 +41,14 @@ jobs:
           ssh-keyscan -H ${{ secrets.DROPLET_IP }} >> ~/.ssh/known_hosts
 
           # Save SSH private key to a file
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          echo -n "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
 
           # Set correct permissions for SSH private key
           chmod 600 ~/.ssh/id_rsa
 
           # Use SSH agent to add the private key
           eval "$(ssh-agent -s)"
-          echo "${{ secrets.SSH_PASSPHRASE }}" | ssh-add - 
+          ssh-add ~/.ssh/id_rsa < <(echo -e "${{ secrets.SSH_PASSPHRASE }}")
 
           # Copy the Docker image to the desired folder on the droplet
           docker save santhoshkumar191020/fleet2:latest | ssh -i ~/.ssh/id_rsa ${{ secrets.DROPLET_USERNAME }}@${{ secrets.DROPLET_IP }} "docker load"
