--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,9 @@ jobs:
           push: true
           tags: santhoshkumar191020/fleet2:latest
 
+      - name: Create SSH directory if not exists
+        run: mkdir -p ~/.ssh
+
       - name: Add DigitalOcean Droplet's host key to known_hosts
         run: ssh-keyscan -H ${{ secrets.DROPLET_IP }} >> ~/.ssh/known_hosts
 
